@@ -1,4 +1,4 @@
-<!-- $Id: namespaces.rdf,v 1.1.1.1 2002-12-19 19:22:21 bwm Exp $ -->
+<!-- $Id: namespaces.rdf,v 1.2 2006-09-19 15:20:40 chris-dollin Exp $ -->
 
 <rdf:RDF
   xmlns:rdf ="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -12,6 +12,7 @@
 <rdfs:Class rdf:ID="C" ex1:prop1="v1" ex2:prop2="v2" ex0:prop0="v0">
 </rdfs:Class>
 
+<ex0:Entity rdf:ID="D"><ex0:property rdf:resource="http://example.org/#spoo"/></ex0:Entity>
 
 </rdf:RDF>
 
